--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ div.body {
 <div class="body">
 <h3>Conclusion</h3>
 <!-- final paragraph --><p> Basketball is a fun game. I hope this little site gave you a bit more insight on how to master an important part of the game. To Recap, the steps we went over today were:
-<ul> <!-- list that details steps thus far -->
+<ul style="list-style-type:square"> <!-- list that details steps thus far -->
   <li>Be Comfortable</li>
   <li>Be Square to the Basket</li>
   <li>Establish a Comfortable Shot Pocket</li>
