--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html>
-<body>
-  <head>
-<style>
+<html lang="en">
+<head> <title> my howto page </title>
+ <style>
 div.body {
     background-color: black;
     color: white;
@@ -10,6 +9,7 @@ div.body {
 }
 </style>
 </head>
+<body>
 <div class="body">
 <h1> How to Shoot a Basketball</h1> <!-- big, introductory header -->
 <p> <!-- introductory paragraph -->Basketball is one of the most popular sports in the world, and also one of my favorites. Its charm comes from simplicity and complexity being meshed together in a fast paced, scoring filled game. One of the most important aspects in basketball is being able to shoot the basketball accurately and efficiently. Being confident with your shot is a vital part of being a basketball player. Although originally said by a hockey player, Wayne Gretzky's famous quote applies to basketball as well:<q>You miss 100% of the shots you don't take.</q></p> </div>
@@ -35,8 +35,7 @@ div.body {
     <th>About Me</th> 
   </tr>
   <tr>
-    <td><img src="https://maxkutz.github.io/HowTo/images/2018KutzMax.jpg"  style="width:52px;height:52px;"> </td> <!-- image of myself for biographical portion -->
+    <td><img src="https://maxkutz.github.io/HowTo/images/2018KutzMax.jpg" alt="error loading" style="width:52px;height:52px;"> </td> <!-- image of myself for biographical portion -->
     <td>Max Kutz was born on February 4, 2000 in Green Bay Wisconsin, and currently resides in the nearby city of Manitowoc. He attends Manitowoc Lutheran High School and is in his Senior year. He created this webpage for his Web Page Design class, and hopes to improve in the art of creating websites.</td>
-  </div>
-</body>
-</html>
+</table>
+ </div></body></html>
