--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> <title> my howto page </title>
+<head> <title> Max's HowTo Page </title>
  <style>
 div.body {
     background-color: black;
