--- a/index.html
+++ b/index.html
@@ -3,10 +3,35 @@
 <head> <title> Max's HowTo Page </title>
  <style>
 div.body {
-    background-color: black;
-    color: white;
-    padding: 20px;
+    Margin: 20px;
 }
+      .outer-box{
+        background-color:grey;
+        margin:10px;
+        min-height:300px;
+      }
+      .name {
+        color:white;
+        font-family:tahoma;
+        margin-left:20px;
+        padding:10px;
+      }
+      .picture {
+        margin-left:20px;
+        float:left;
+        margin-right:20px;
+        margin-bottom:10px;
+        border:2px solid black;
+      }
+      .bio {
+        font-family:tahoma;
+        padding-left:20px;
+        padding-right:20px;
+        padding-bottom:20px;
+      }
+      img {
+        display:block;
+      }
 </style>
 </head>
 <body>
@@ -28,14 +53,11 @@ div.body {
   <li>Flick Wrist at the Top of your Jump</li>
 </ul>
 <p>These are not all you will need to learn, however. Visit sites like <a href="https://www.breakthroughbasketball.com/"><!--this is a link to a helpfu basketball tutoring site -->Breakthrough Basketball</a> to help learn how to further improve. </div>
-<div class=body>
-<table style="width:100%"><!--table including a picture and biography of myself -->
-  <tr>
-    <th> </th>
-    <th>About Me</th> 
-  </tr>
-  <tr>
-    <td><img src="https://maxkutz.github.io/HowTo/images/2018KutzMax.jpg" alt="error loading" style="width:52px;height:52px;"> </td> <!-- image of myself for biographical portion -->
-    <td>Max Kutz was born on February 4, 2000 in Green Bay Wisconsin, and currently resides in the nearby city of Manitowoc. He attends Manitowoc Lutheran High School and is in his Senior year. He created this webpage for his Web Page Design class, and hopes to improve in the art of creating websites.</td>
-</table>
- </div></body></html>
+<br>
+<div class="outer-box">
+      <div class="name"><h1>About the Author</h1> </div>
+      <div class="picture"><img src="https://maxkutz.github.io/AboutTheAuthor/images/me.jpg"></div>
+      <div class="bio"><h2>Author Name</h2>
+     <p>Max Kutz was born on February 4, 2000 in Green Bay, Wisconsin. He has two siblings including a twin sister and an older brother. He is currently enrolled in 12th grade at Manitowoc Lutheran High School. His hobbies include playing basketball, football and video games of all kinds. He also has a very soft spot for pets, and prefers cats despite owning a yorkshire terrier which he loves. He plans on going to college for something social sciences related, and enjoys learning how to improve in his coding and website building skills.</p>
+      </div>
+</body></html>
