--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> <title> Max's HowTo Page </title>
+<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Stalinist+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
  <style>
 div.body {
     Margin: 20px;
+    font-family:"PT Sans Narrow", sans-serif;
 }
       .outer-box{
         background-color:grey;
@@ -32,6 +37,11 @@ div.body {
       img {
         display:block;
       }
+      h1 { font-family: 'Stalinist One', cursive;
+      }
+      h2 { font-family:Passion One, cursive;
+      }
+      h3 { font-family: 'Lobster', cursive;
 </style>
 </head>
 <body>
@@ -41,7 +51,7 @@ div.body {
 <div class="body">
   <h2> <!-- heading for non intro paragraphs -->The Process </h2> 
 <p>One important thing to keep in mind when learning  proper shooting form is that there is no truly "<i>correct</i>" way to shoot a basketball. For example, some superstars like Hall of Famer Larry Bird had very unorthodox, unnatural shooting motions. This did not stop him from being one of the best shooters to ever play basketball.</p>
-<p> The first <b><!-- bold for emphasis -->major </b>thing in shooting is keeping a good stance. This means keeping your dominant eye and arm lined up with the basket, as well as keeping feet pointed in direction of basket with legs in a comfortable position around shoulder lenght apart. The next thing to learn about is the shot pocket. This is the place where you bring the ball after catching a pass or stopping your dribble. You should always try to grip and raise the ball the same way every time you shoot.</p>
+<p> The first <b><!-- bold for emphasis -->major </b>thing in shooting is keeping a good stance. This means keeping your dominant eye and arm lined up with the basket, as well as keeping feet pointed in direction of basket with legs in a comfortable position around shoulder length apart. The next thing to learn about is the shot pocket. This is the place where you bring the ball after catching a pass or stopping your dribble. You should always try to grip and raise the ball the same way every time you shoot.</p>
 <p> The final part and most noticeable is the actual shot itself. It starts with bending your knees to create less stress on the arms and jump. You need to flick the wrist in a natural motion toward the basket with your dominant hand, with the other hand supporting the ball without changing the arc of the ball. While you shoot, your elbow should remain facing the basket at close to a 90 degree angle. You should flick the wrist near the top of your jump for best results.</p></div>
 <div class="body">
 <h3>Conclusion</h3>
