--- a/index.html
+++ b/index.html
@@ -1,48 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> <title> Max's HowTo Page </title>
+<link rel="stylesheet" type="text/css" href="howto.css">
 <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Stalinist+One" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
- <style>
-div.body {
-    Margin: 20px;
-    font-family:"PT Sans Narrow", sans-serif;
-}
-      .outer-box{
-        background-color:grey;
-        margin:10px;
-        min-height:300px;
-      }
-      .name {
-        color:white;
-        font-family:tahoma;
-        margin-left:20px;
-        padding:10px;
-      }
-      .picture {
-        margin-left:20px;
-        float:left;
-        margin-right:20px;
-        margin-bottom:10px;
-        border:2px solid black;
-      }
-      .bio {
-        font-family:tahoma;
-        padding-left:20px;
-        padding-right:20px;
-        padding-bottom:20px;
-      }
-      img {
-        display:block;
-      }
-      h1 { font-family: 'Stalinist One', cursive;
-      }
-      h2 { font-family:Passion One, cursive;
-      }
-      h3 { font-family: 'Lobster', cursive;
-</style>
 </head>
 <body>
 <div class="body">
@@ -56,12 +19,13 @@ div.body {
 <div class="body">
 <h3>Conclusion</h3>
 <!-- final paragraph --><p> Basketball is a fun game. I hope this little site gave you a bit more insight on how to master an important part of the game. To Recap, the steps we went over today were:
-<ul style="list-style-type:square"> <!-- list that details steps thus far -->
+<ul> <!-- list that details steps thus far -->
   <li>Be Comfortable</li>
   <li>Be Square to the Basket</li>
   <li>Establish a Comfortable Shot Pocket</li>
   <li>Flick Wrist at the Top of your Jump</li>
 </ul>
+<img src="https://maxkutz.github.io/HowTo/images/Ad.jpg" id="Ad">
 <p>These are not all you will need to learn, however. Visit sites like <a href="https://www.breakthroughbasketball.com/"><!--this is a link to a helpfu basketball tutoring site -->Breakthrough Basketball</a> to help learn how to further improve. </div>
 <br>
 <div class="outer-box">
